--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,22 @@ Uis/__pycache__/compraUI.cpython-312.pyc
 Uis/__pycache__/empleadosCRUD.cpython-312.pyc
 Uis/__pycache__/inventarioUI.cpython-312.pyc
 Uis/__pycache__/ventaUI.cpython-312.pyc
+__pycache__/auth_controller.cpython-312.pyc
+Uis/__pycache__/clientesCRUD.cpython-312.pyc
+Uis/__pycache__/clientesUI.cpython-312.pyc
+Uis/__pycache__/compraUI.cpython-312.pyc
+Uis/__pycache__/empleadosCRUD.cpython-312.pyc
+Uis/__pycache__/inventarioUI.cpython-312.pyc
+Uis/__pycache__/loginUI.cpython-312.pyc
+Uis/__pycache__/productsCRUD.cpython-312.pyc
+Uis/__pycache__/ventaUI.cpython-312.pyc
+Controllers/__pycache__/product_controller.cpython-312.pyc
+Daos/__pycache__/product_dao.cpython-312.pyc
+Models/__pycache__/product_model.cpython-312.pyc
+Services/__pycache__/product_service.cpython-312.pyc
+Uis/__pycache__/clientesCRUD.cpython-312.pyc
+Uis/__pycache__/clientesUI.cpython-312.pyc
+Uis/__pycache__/compraUI.cpython-312.pyc
+Uis/__pycache__/empleadosCRUD.cpython-312.pyc
+Uis/__pycache__/inventarioUI.cpython-312.pyc
+Uis/__pycache__/ventaUI.cpython-312.pyc
